--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,11 +6,15 @@ $break-point5: 760px;
 $break-point6: 690px;
 $break-point7: 620px;
 $break-point8: 520px;
-
+$break-point9: 410px;
+* {
+    font-family: sans-serif;
+}
 body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+  
 }
 header {
     background-image: url('./../img/bg.jpg');
@@ -24,6 +28,9 @@ header {
     @media only screen and (max-width: $break-point8) {
         height: 650px;
     }
+    @media only screen and (max-width: $break-point9) {
+        height: 580px;
+    } 
     
 }
 .container {
@@ -56,6 +63,7 @@ header {
     text-transform: uppercase;
     font-weight: bold;
     transition: 0.2s;
+    z-index: 101;
     
     &:hover {
         background-color: #F5841F;
@@ -70,7 +78,7 @@ header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border: 1px solid black;
+           
             .burger, .phone {
                 display: none;
             }
@@ -84,11 +92,15 @@ header {
             }
             svg {
                 display: block;
+               
             }
             @media only screen and (max-width: $break-point7) {
             justify-content: space-around;
+            
             .burger, .phone {
+                width: 42px;
                 display: block;
+                margin: 0 10px;
             }
             }
 
@@ -157,7 +169,8 @@ header {
             display: flex;
             align-items: center;
             justify-content: center;
-            
+          
+            height: 100%;
         }
         &__person {
             margin-right: auto;
@@ -177,10 +190,13 @@ header {
                 height: 90%;
                 top: 7%;
                 @media only screen and (max-width: $break-point5) {
-                    height: 77.3%;
+                    height: 608px;
                 }
                 @media only screen and (max-width: $break-point8) {
                     height: 66.8%;
+                }
+                @media only screen and (max-width: $break-point9) {
+                    height: 452px;
                 }
             }
             &--top-right {
@@ -199,6 +215,9 @@ header {
                 @media only screen and (max-width: $break-point8) {
                     height: 23.9%;
                 }
+                @media only screen and (max-width: $break-point9) {
+                    height: 18.9%;
+                } 
             }
             &--bottom-right {
                 position: absolute;
@@ -220,10 +239,13 @@ header {
                     right: -60%;
                     width: 200%;
                     height: 16.5%;
-                    bottom: 120px;
+                    bottom: 130px;
                 }
                 @media only screen and (max-width: $break-point8) {
                     bottom: 204px;
+                }
+                @media only screen and (max-width: $break-point9) {
+                    bottom: 286px;
                 }
             }
             &__face {
@@ -232,13 +254,18 @@ header {
                 right: -20%;
                 @media only screen and (max-width: $break-point1) {
                     right: -40%;
+                   
                 }   
                 @media only screen and (max-width: $break-point5) {
                     right: -80%;
-                   width: 500px;
+                    width: 485px;
                 }
                 @media only screen and (max-width: $break-point8) {
                     width: 450px;
+                }
+                @media only screen and (max-width: $break-point9) {
+                    right: -100%;
+                    width: 400px;
                 }
                 
 
@@ -309,20 +336,29 @@ header {
                 max-width: 600px;
                 height: 160px;
                 max-width: 450px;
-                top: 50%;
+                top: 404px;
             }
             @media only screen and (max-width: $break-point8) {
                 max-width: 300px;
-                top: 40%;
+                top: 330px;
             }
+            @media only screen and (max-width: $break-point9) {
+                top: 35%;
+                height: 135px;
+                padding-top: 2em;
+            } 
             & > p {
                 color: #75ACFF;
                 font-size: 1em;
                 letter-spacing: 0.3em;
                 text-transform: uppercase;
                 margin: 0;
+                margin-top: -1.5em;
                 @media only screen and (max-width: $break-point8) {
                     font-size: 1em;
+                }
+                @media only screen and (max-width: $break-point8)  {
+                    margin-top: -1.5em;
                 }
             }
             h1 {
@@ -335,6 +371,7 @@ header {
                 @media only screen and (max-width: $break-point8) {
                     font-size: 2em;
                 }
+               
                 span {
                     font-weight: 100;
                 }
@@ -351,30 +388,37 @@ header {
                 right: 15%;
                 bottom: -20%;
                 display: flex;
+                z-index: 100;
                 @media only screen and (max-width: $break-point1) {
                     right: 5%;
-                }
-                @media only screen and (max-width: $break-point2) {
-                    right: 0;
-                }
-                @media only screen and (max-width: $break-point1) {
                     flex-direction: column;
                     align-items: center;
                     left: 0;
                     justify-content: center;
                     bottom: -40%;
-                    .button {
-                        margin-top: 10px;
-                        width: 220px;
-                        margin-right: 0;
-                    }
                 }
+                @media only screen and (max-width: $break-point2) {
+                    right: 0;
+                }
+              
                 @media only screen and (max-width: $break-point4) {
                    left: 100px;
                 }
                 @media only screen and (max-width: $break-point5) {
                    left: -50%;
                    bottom: -60%;
+                }
+                @media only screen and (max-width: $break-point8) {
+                    left: -37%;
+                }
+                .button {
+                    margin-top: 10px;
+                    width: 220px;
+                    margin-right: 0;
+                    margin-left: 0;
+                    @media only screen and (max-width: $break-point8) {
+                        width: 175px;
+                    }
                 }
             }
             .know-more {
@@ -383,7 +427,7 @@ header {
             }
             .video {
                 width: 220px;
-             
+               
                 display: flex;
                 align-items: center; 
                 justify-content: space-between;
@@ -418,7 +462,7 @@ header {
         background-color: rgba(228, 233, 240, 0.514);
         @media only screen and (max-width: $break-point4) {
             width: 100%;
-            height: 30%;
+            height: 28%;
         }
     }
     .container {
@@ -434,6 +478,10 @@ header {
             @media only screen and (max-width: $break-point4) {
                 text-align: left;
             }
+            @media only screen and (max-width: $break-point4) {
+                width: 100%;
+                max-width: 80%;
+            }
         }
         &__subtitle {
             color: #75ACFF;
@@ -443,16 +491,22 @@ header {
         &__title {
             font-size: 2em;
             margin-top: 0.5em;
+            @media only screen and (max-width: $break-point9) {
+                font-size: 1.4em;
+            } 
         }
         &__chanels {
             margin-top: 4em;
-            display: flex;
-            flex-wrap: wrap;
+          
             max-width: 50%;
             position: relative;
-            @media only screen and (max-width: $break-point3) {
-                max-width: 400px;
-                width: 400px;
+          
+            @media only screen and (max-width: $break-point1) {
+                display: flex;
+            }
+            @media only screen and (max-width: $break-point4) {
+                width: 100%;
+                max-width: 80%;
             }
             .rectangle {
                 position: absolute;
@@ -467,22 +521,174 @@ header {
                    height: 62%;
                    left: 1px;
                    top: 57px;
+                   display: none;
+               
                 }
                 @media only screen and (max-width: $break-point3) {
-                    display: none;
+                    
                 }
             }
-            .chanel {
-                padding: 3em 1.4em ;
-                background-color: #F2F4F9;
-                margin: 0.8em;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex: 1 1 100px;
-                height: 100px;
-                z-index: 10;
+            
             }
+            .chanels__row {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                @media only screen and (max-width: $break-point1) {
+                    flex-direction: column;
+                }
+                .chanel {
+                    padding: 3em 1.4em ;
+                    background-color: #F2F4F9;
+                    margin: 0.8em;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 100px;
+                    height: 100px;
+                    z-index: 10;
+                    @media only screen and (max-width: $break-point8) {
+                        max-width: 81px;
+                        width: 100%;
+                        height: 35px;
+                    }
+                    @media only screen and (max-width: $break-point9) {
+                       margin: 0.3em;
+                       max-width: 70px;
+                    } 
+            }
+            @media only screen and (max-width: $break-point3) {
+                max-width: 400px;
+                width: 400px;
+            }
+            @media only screen and (max-width: $break-point8) {
+                
+            }
+            
         }
+    }
+}
+
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 105;
+    display: none;
+    justify-content: space-between;
+    background-color: #4069A7;
+    width: 750px;
+    color: white;
+  
+    img {
+        display: block;
+    }
+    input {
+        outline: none;
+        background-color: transparent;
+        border: none;
+        position: relative;
+        z-index: 101;
+        width: 100%;
+        margin-top: 1.4em;
+        color: white;
+        font-size: 1em;
+    }
+  
+    [id=Phone]:focus:invalid ~ label::before {
+        content: 'Неверный формат номера телефона';
+        position: absolute;
+        color: #F5841F;
+        bottom: 100%;
+    }
+    form {
+        margin-top: 2em;
+        width: 80%;
+    }
+    &__forms {
+        margin: 0 auto;
+        margin-top: 1em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: auto;
+        width: 100%;
+      h2 {
+          font-size: 1.2em;
+      }
+       label {
+           position: relative;
+           width: 100%;
+            margin-top: 2em;
+            display: block;
+            color: rgb(207, 207, 207);
+       }
+        label::after {
+                content: "";
+                position: absolute;
+                width: 100%;
+                bottom: -265%;
+                border-bottom:1px solid rgb(207, 207, 207);
+                display: block;
+               
+            }
+    }
+    .button {
+        margin-right: auto;
+        margin-top: 1.8em;
+        background-color: #F5841F;
+        color: white;
+        border-color: #F5841F;
+        cursor: pointer;
+        margin-bottom: 2em;
+    }
+    @media only screen and (max-width: $break-point4) {
+        width: 400px;
+        
+        img {
+            display: none;
+        }
+    }
+    @media only screen and (max-width: $break-point8) {
+        width: 80%;
+    }
+}
+
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: black;
+    opacity: 0.5;
+    z-index: 101;
+    display: none;
+}
+.mobile {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color:  #4069A7;
+    transform: translateY(-100%);
+    transition: 0.3s;
+    ul {
+        list-style: none;
+        margin-left: 0;
+        padding-left: 0;
+        color: white;
+        li {
+            padding: 1em;
+        }
+    }
+    svg {
+        position: absolute;
+        top: 10%;
+        right: 10%;
+        z-index: 10;
     }
 }
