--- a/src/scss/reasons.scss
+++ b/src/scss/reasons.scss
@@ -10,20 +10,48 @@
         height: 100%;
         background-color: #4069A7;
         z-index: 0;
+        @media only screen and (max-width: $break-point4) {
+            height: 67%;
+            width: 100%;
+            top: 33%; 
+        }
+        @media only screen and (max-width: $break-point8) {
+            height: 80%;
+            width: 100%;
+            top: 23%;
+        }
     }
     .container {
         display: grid;
         grid-template-columns: 6fr 4fr;
         align-items: center;
+        @media only screen and (max-width: $break-point4) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        @media only screen and (max-width: $break-point4) {
+            max-width: 80%;
+        }
+
         &__qutes {
             color: white;
             display: flex;
             flex-wrap: wrap;
+            @media only screen and (max-width: $break-point4) {
+                order: 1;
+                flex-direction: column;
+                margin-right: 0;
+            }
+           
             .item {
                 position: relative;
                 max-width: 300px;
                 margin-top: 5em;
                 margin-right: 3em;;
+                @media only screen and (max-width: $break-point4) {
+                    margin-right: 0;
+                }
                 p {
                     font-weight: 200;
                 }
@@ -50,6 +78,9 @@
             h3 {
                 margin-top: 10px;
                 font-size: 2.5em;
+                @media only screen and (max-width: $break-point8) {
+                    font-size: 1.5em;
+                }
             }
             .button {
                 background-color: #F5841F;
@@ -64,6 +95,13 @@
 
 .form {
     position: relative;
+    @media only screen and (max-width: $break-point4) {
+        margin-top: 37em;
+    }
+    @media only screen and (max-width: $break-point8) {
+        margin-top: 15em;
+    }
+ 
     .background {
         position: absolute;
         top: 0;
@@ -71,6 +109,9 @@
         width: 60%;
         height: 100%;
         background-color: #1D2B46;
+        @media only screen and (max-width: $break-point4) {
+            width: 100%;
+        }
     }
     .video {
         position: absolute;
@@ -78,12 +119,25 @@
         right: 0;
         height: 100%;
         top: -75px;
+        @media only screen and (max-width: $break-point4) {
+            top: -100%;
+            width: 100%;
+            height: 100%;
+        } 
+        @media only screen and (max-width: $break-point8) {
+            height: 40%;
+            top: -40%;
+        }
     }
     .container {
         .action {
             width: 50%;
             padding: 4em 0;
-            
+            @media only screen and (max-width: $break-point4) {
+                width: 70%;
+                margin: 0 auto;
+                padding: 4em 0;
+            }
             p {
                 color: #75ACFF;
                 font-size: 1em;
@@ -97,6 +151,9 @@
                 margin-bottom: 0;
                 color: white;
                 font-weight: lighter;
+                @media only screen and (max-width: $break-point8) {
+                    font-size: 1.5em;
+                }
             }
             form {
                 margin-top: 1em;
@@ -106,6 +163,9 @@
                 margin-bottom: auto;
                 margin-right: auto;
                 width: 70%;
+                @media only screen and (max-width: $break-point4) {
+                    width: 100%;
+                }
                 input {
                     outline: none;
                     background-color: transparent;
@@ -161,11 +221,23 @@
         top: -110px;
         background-color: #4069A7;
         z-index: -1;
+        @media only screen and (max-width: $break-point4)  {
+            width: 100%;
+            height: 60%;
+            right: 0;
+            top: 164px;
+        }
+        @media only screen and (max-width:$break-point8) {
+            height: 80%;
+        }
     }
     .container {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        @media only screen and (max-width: $break-point4)  {
+            flex-direction: column;
+        }
         h3 {
             font-size: 2em;
             text-transform: uppercase;
@@ -176,7 +248,9 @@
         .days {
             display: flex;
             justify-content: space-between;
-            
+            @media only screen and (max-width:$break-point8) {
+                flex-direction: column;
+            }
             &__card {
                 background-color: white;
                 width: 150px;
@@ -186,6 +260,9 @@
                 align-items: center;
                 justify-content: center;
                 margin-left: 15px;
+                @media only screen and (max-width:$break-point8) {
+                    margin-top: 15px;
+                }
                 .number {
                     font-size: 5em;
                     margin: 0;
